infra/terraform/search-offer-svc_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-offer-svc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search-offer-svc
  template:
    metadata:
      labels:
        app: search-offer-svc
    spec:
      containers:
      - name: search-offer-svc
        image: 429134228003.dkr.ecr.us-east-1.amazonaws.com/search-offer-svc:latest
        ports:
        - containerPort: 8080
        
        # Injecting all variables from ConfigMap and Secret
