infra/terraform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airline-api-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:429134228003:certificate/355047fe-f178-4f09-bde3-98d26c9419fe
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - host: api.ghoshsourav21.in
      http:
        paths:
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: search-offer-svc-lb
                port:
                  number: 80
          - path: /book
            pathType: Prefix
            backend:
              service:
                name: order-booking-svc-lb
                port:
                  number: 80
